[gd_scene load_steps=3 format=3 uid="uid://cogno32qd13u"]

[ext_resource type="Script" path="res://scences/ui/menus/bestiary.gd" id="1_i0uol"]
[ext_resource type="Texture2D" uid="uid://ckp4wldwmrcxf" path="res://assets/objects/textbook.png" id="2_txjvj"]

[node name="Bestiary" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -165.0
offset_right = 304.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i0uol")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -14.0
offset_right = 16.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.470588)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CoreView" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CoreTitle" type="RichTextLabel" parent="CoreView"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.0
offset_top = 9.0
offset_right = 244.0
offset_bottom = 49.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center][font_size=32]Maths textbook[/font_size][/center]"
fit_content = true

[node name="CoreIcon" type="TextureRect" parent="CoreView"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 56.0
offset_right = 40.0
offset_bottom = 136.0
grow_horizontal = 2
texture = ExtResource("2_txjvj")
expand_mode = 1
stretch_mode = 5

[node name="CoreText" type="RichTextLabel" parent="CoreView"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -1.0
offset_right = 204.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]At the start of each turn gain 1 memory and draw 1 card. Whenever you play a card, draw a card then choose a card in your hand to discard

At the start of each turn gain 1 memory. Whenever you play a card, choose a card in your hand to discard

I knew there was a reason for me not liking maths in school[/center]"
fit_content = true
autowrap_mode = 2

[node name="ShopText" type="Label" parent="CoreView"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 483.0
offset_top = 67.0
offset_right = 594.0
offset_bottom = 124.0
text = "Right click to purchase in shop"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
